wp-content/themes/viaembedded/style.css
/* ... */
table.tablepress {
    border: none;
}

table.tablepress thead th {
    background: #403a3a;
    color: white;
    font-weight: normal;
    font-size: larger;
    text-align: center;
    border: none;
    border-left: thin solid white;
    height: 35px;
}

table.tablepress thead th:first-child {
    border-left: thin solid #403a3a;
}

table.tablepress thead th:last-child {
    border-right: thin solid #403a3a;
}

table.tablepress tbody td {
    border: thin solid #403a3a;
    vertical-align: middle;
}

h2.tablepress-table-name {
    padding: 0.5em 0;
    font-size: x-large;
}

table.t-headers tr td[colspan],
table.t-headers tr td[colspan]:hover {
    background-color: #E3E3E3;
}

/* Downloads table */
table.t-downloads {
    margin-bottom: 10px;
}
table.t-downloads .column-2,
table.t-downloads .column-3 {
    width: 170px;
}

table.t-downloads tr td[colspan],
table.t-downloads tr td[colspan]:hover {
    background-color: #E3E3E3;
}

/* Ordering info table */
table.t-ordering .column-1,
table.t-ordering .column-2 {
    width: 200px;
}

/* Data Sheet table */
table.t-datasheet .column-1 {
    font-weight: bold;
    width: 200px;
}
table.t-datasheet tr.row-1 td,
table.t-datasheet tr.row-1:hover td {
    font-weight: bold;
    font-size: x-large;
    color: white;
    background: #007AC2;
}
table.t-datasheet,
table.t-datasheet tr,
table.t-datasheet tbody td {
    border: none;
    font-size: 18px;
    line-height: normal;
}
table.t-datasheet tr {
    border-top: thin solid black;
    border-bottom: thin solid black;
}

table.t-c1-fixwidth .column-1{
    width: 200px;
}

@media only screen and (max-width: 797px) {

    table.t-c1-fixwidth .column-1{
	width: initial;
    }

    table.t-ordering .column-1,
    table.t-ordering .column-2 {
	width: initial;
    }
}

/*--------------------------------------------------------------
13.0 Specific pages
--------------------------------------------------------------*/

/*--------------------------------------------------------------
13.1 Product page
--------------------------------------------------------------*/

#product-hightlights-outer {

}

ul#product-highlights {
    list-style-image: url("images/diamond.png");
    line-height: 180%;
    text-align: left;
}

.product-content h1,
.product-content h2,
.product-content h3,
.product-content h4,
.product-content h5,
.product-content h6 {
    color: #007AC2;
    font-weight: bold;
    margin-bottom: 0.2em;
    font-size: 100%;
    font-style: inherit;
}

#product-summary {
    display: table;
    width: 100%;
}

#product-summary > div {
    display: table-cell;
    vertical-align: middle;
    float: none;
}

div#accordion {
    font-size: inherit;
}

span#license-header {
    font-weight: bold;
}

@media (max-width: 899px) {

    #product-summary > div {
	display: table-row;
	float: none;
    }

}


/*------------------
Slider
----------------------*/

/* Prevents slides from flashing */
#slides {
    display:none;
    max-width: 400px;
    margin: 0 auto;
}

/*--------------------------------------------------------------
13.2 Front Page
--------------------------------------------------------------*/

/* Hide title on the front page */
.frontpage header > h1.entry-title {
    display: none;
}

table.frontpage td {
    vertical-align: middle;
}

table#frontpaget1 {
    padding-top: 20px;
}

/*--------------------------------------------------------------
??.? Site Header
--------------------------------------------------------------*/

#head-banner {
    background: #007AC2;
}

#head-banner {
    background: #007AC2 url("images/header.png") no-repeat center;
    height: 98px;
    margin: 0 auto;
    position: relative;
}

/* postioning: http://stackoverflow.com/a/11127437/171237 */
#home-link {
    position: absolute;
    top: 0px;
    right:50%;
    width: 98px;
    height: 98px;
    margin-right: 295px; /* depends on #head-banner background image size */
    background-color: transparent;
    border: none;
}

.home-links {
    display: block;
    position: relative;
    z-index: 10;
}

header#masthead {
    padding: 0.5em 0 0 0;
}

/* Language switcher */

div#language-switcher {
    float: left;
    clear: left;
}

div#language-switcher ul {
    margin: 0;
}

div#language-switcher ul li.lang-item {
    display: inline;
    list-style: none;
    margin-right: 15px;
}

@media screen and (min-width: 768px) {

    #banner-row {
	height: 98px;
	background: white;
    }

    .banner-section {
	height: 98px;
    }

    #banner-center {
    }

    #banner-logo-outer {
	position: relative;
	height:50px;
    }
    #banner-logo {
	float: right;
    }

    #site-navigation-outer {
    	clear: none;
    	float: none;
    	padding-top: 5px;
    	position: relative;
    	height: 50px;
    	width: 100%
    }
    #site-navigation {
    	width: 100%;
    }

}

/*--------------------------------------------------------------
??.? Yoast Breadcrumbs
--------------------------------------------------------------*/

#breadcrumbs-outer {
    font-size: 14px;
    float: left;
}

p#breadcrumbs {
    margin: 0;
    clear: both;
}

/*--------------------------------------------------------------
??.? Search
--------------------------------------------------------------*/

#search-outer {
    float: right;
}

#search-outer > form > input {
    display: none;
}

/*--------------------------------------------------------------
??.? UberMenu
--------------------------------------------------------------*/

/* Sticky menu and in-site anchors */
a[name] {
    display: block;
    position: relative;
    top: -60px;
    visibility: none;
}

/*--------------------------------------------------------------
??.? Page headers
--------------------------------------------------------------*/

body.page-template-default article.page.has-featured-image {
    margin-top: 30px;
}

body.page-template-default article.page.has-featured-image header.entry-header {
    position: relative;
    margin-bottom: 20px;
}
/* ... */

